--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -6,11 +6,15 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="wrapper">
+      <header class="border-bottom border-dark mb-2"><%= render 'layouts/header', customer: current_customer %></header>
+      <main><%= yield %></main>
+      <footer class="border-top border-dark"></footer>
+    </div>
   </body>
 </html>
