--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<div class="container mt-4">
+  <div class="row">
+      <h4 class=class="mb-4 text-center bg-light"><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4>
+       <table class="table table-borderless">
+           <tr>
+               <td>会員ID</td>
+               <td><%= @customer.id %></td>
+           </tr>
+           <tr>
+               <td>名前</td>
+               <td><%= @customer.name %></td>
+           </tr>
+           <tr>
+               <td>メールアドレス</td>
+               <td><%= @customer.email %></td>
+           </tr>
+           <tr>
+               <td>会員ステータス</td>
+               <td class= "<%= @customer.is_deleted ? 'text-secondary' : 'text-success' %>"><%= @customer.is_deleted ? '退会済み' : '有効' %></td>
+           </tr>
+           <tr>
+               <td></td>
+               <td><%= link_to "編集する", edit_admin_customer_path(params[:id]), class: "btn btn-success" %> </td>
+           </tr>
+       </table>
+  </div>
+</div>
