--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+.wrapper{
+    height: 100%;
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 120px;
+    box-sizing: border-box;
+}
+
+footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+
+    position: absolute;
+    bottom: 0;
+}
