--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<h1>Admi<div class="container">
+  <div class="row">
+      <h4 class="bg-light">会員一覧</h4>
+
+      <table class ="table">
+          <tr>
+              <th>会員ID</th>
+              <th>氏名</th>
+              <th>メールアドレス</th>
+              <th>ステータス</th>
+          </tr>
+          <% @customers.each do |customer| %>
+          <tr>
+              <td><%= customer.id %></td>
+              <td>
+                  <%= link_to admin_customer_path(customer.id) do %>
+                  <%= customer.last_name %><%= customer.first_name %>
+                  <% end %>
+              </td>
+              <td><%= customer.email %></td>
+              <td class= "<%= customer.is_deleted ? 'text-secondary' : 'text-success' %>"><%= customer.is_deleted ? '退会済み' : '有効' %></td>
+          </tr>
+          <% end %>
+      </table>
+      <%= paginate @customers %>
+  </div>
+</div>
