--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,23 +3,17 @@
   <h2 class="bg-light d-inline-block">新規会員登録</h2>
 <div><%= flash[:notice] %></div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "publics/shared/error_messages", resource: resource %>
+<%= form_with model: @customer, url: customer_registration_path do |f| %>
+  <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="mt-2">
     <table>
       <tr>
         <td class="py-2">名前</td>
-        <td style="width:70px"><%= f.label :（姓） %></td>
-        <td><%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder:"令和" %></td>
-        <td class="ml-5" style="width:70px"><%= f.label :（名） %></td>
-        <td><%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder:"道子" %></td>
+        <td></td>
+        <td><%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder:"令和" %></td>
       </tr>
-      <tr>
-        <td class="py-2">フリガナ</td>
-        <td><%= f.label :名前 %></td>
-        <td><%= f.text_field :naae, autofocus: true, autocomplete: "name", placeholder:"レイワ" %></td>
-      </tr>
+
       <tr>
         <td class="py-2"><%= f.label :メールアドレス %></td>
         <td></td>
