--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -2,15 +2,19 @@
 <div class="container ml-5">
 　<h4 class="bg-light d-inline-block mb-2 offset-2 p-1">マイページ</h4>
 
-  <% if customer.guest_user? %>
+  <% unless @customer.guest_user? %>
    <div class="d-flex">
      <h4 class="my-auto col-2"><b>登録情報</b></h4>
      <%= link_to "編集する", customers_information_edit_path, class:'btn btn-success' %>
 　  </div>
   <%end%>
-　  
+
     <div class="table mb-3 ml-3">
       <table class="table-bordered">
+        <tr>
+          <td class="bg-light col-3">プロフィール画像</td>
+          <td><%= image_tag @customer.get_profile_image(80, 80) %></td>
+        </tr>
         <tr>
           <td class="bg-light col-3">名前</td>
           <td class="col-9"><%= @customer.name %></td>
@@ -18,6 +22,10 @@
         <tr>
           <td class="bg-light">メールアドレス</td>
           <td><%= @customer.email %></td>
+        </tr>
+        <tr>
+          <td class="bg-light">自己紹介</td>
+          <td><%= @customer.introduction %></td>
         </tr>
     　</table>
     </div>
