--- a/app/views/admin/ski_resorts/index.html.erb
+++ b/app/views/admin/ski_resorts/index.html.erb
@@ -1,2 +1,48 @@
-<h1>Admin::SkiResorts#index</h1>
-<p>Find me in app/views/admin/ski_resorts/index.html.erb</p>
+
+    <div class="col-lg-12">
+      <div class="d-flex">
+      <h4 class="bg-light d-inline-block my-2 offset-1">スキー場一覧</h4>
+      <p class="offset-9">
+          <%= link_to new_admin_ski_resort_path do %>
+          <i class="fa-solid fa-circle-plus fa-2xl"></i>
+          <% end %>
+      </p>
+      </div>
+      <div class="ml-3">
+        <div class="flex-row">
+
+          <table class="table mt-3">
+            <thead>
+              <tr>
+                <th>スキー場画像</th>
+                <th>スキー場名</th>
+                <th>紹介文</th>
+                <th>都道府県</th>
+              </tr>
+            </thead>
+
+            <tbody>
+            <% @ski_resorts.each do |ski_resort| %>
+              <tr>
+                <td>
+                  <%= ski_resort.id %>
+                </td>
+                <td>
+                  <%= link_to admin_ski_resort_path(ski_resort.id) do %>
+                    <%= ski_resort.name %>
+                  <% end %>
+                </td>
+                <td>
+                  <%= ski_resort.introduction %>
+                </td>
+                <td>
+                  <%= ski_resort.prefecture.name %>
+                </td>
+              </tr>
+            <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
