--- a/app/views/admin/ski_resorts/show.html.erb
+++ b/app/views/admin/ski_resorts/show.html.erb
@@ -1,2 +1,40 @@
-<h1>Admin::SkiResorts#show</h1>
-<p>Find me in app/views/admin/ski_resorts/show.html.erb</p>
+<div class="container">
+  <h4 class="bg-light text-center mt-4" style="width:150px">スキー場詳細</h3>
+
+  <div class="col-md-9 ml-3 mx-auto">
+  　<div class="row">
+    　  <!--写真-->
+      <div class="mr-2">
+        <% if @ski_resort.image.attached? %>
+          <% image_tag @ski_resort.image.each do |image| %>
+            <%= image_tag image.variant(resize: '500x500') %>
+          <% end %>
+        <% end %>
+      </div>
+      <!--スキー場情報-->
+      <div>
+      <table>
+        <tr>
+          <th style="width:150px">スキー場名</th>
+          <th style="width:260px"><%= @ski_resort.name %></th>
+        </tr>
+        <tr>
+          <th>スキー場説明</th>
+          <th><%= @ski_resort.introduction %></th>
+        </tr>
+        <tr>
+          <th>都道府県</th>
+          <th><%= @ski_resort.prefecture.name %></th>
+        </tr>
+        <tr>
+          <th>住所</th>
+          <th><%= @ski_resort.address %></th>
+        </tr>
+      </table>
+      <div class="mt-3 offset-2">
+        <%= link_to "編集する", edit_admin_ski_resort_path(@ski_resort.id), class:"btn btn-success" %>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
