--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,16 +1,6 @@
-<% if @post.errors.any? %>
-  <%= @post.errors.count%>error prohibited this obj from being saved:
-  <ul>
-    <% @post.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-  </h3>
-  <ul>
 
 <div>
-  <% link_to "新規投稿", new_post_path %>
+  <%= link_to "新規投稿", new_post_path %>
 </div>
 
 <div class="container">
@@ -22,6 +12,7 @@
               <th>プロフィール画像</th>
               <th>名前</th>
               <th>投稿</th>
+              <th>評価</th>
           </tr>
           <% @posts.each do |posted| %>
           <tr>
@@ -32,6 +23,7 @@
                   <% end %>
               </td>
               <td><%= posted.body %></td>
+              <td><%= render "star", posts: posted %></td>
           </tr>
           <% end %>
       </table>
