--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,13 +1,4 @@
-<% if @ski_resort.errors.any? %>
-  <div>
-    <%= @ski_resort.errors.count %>errors prohibited this obj form being saved:
-     <ul>
-     <% @ski_resort.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-     <% end %>
-     </ul>
-  </div>
-<% end %>
+
 
 <div class="container mt-4">
   <div class="row no-gutters">
@@ -39,8 +30,38 @@
               <%= f.collection_select(:prefecture_id, @prefecture, :id, :name,{prompt: "--選択してください--"}) %>
             </td>
           </tr>
+
           <tr>
+            <td>
+              <% if @post.id.nil? %>
+                <div class="form-group" id="star">
+                  <%= f.label :star %>
+                  <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
+                  <div id="post_raty"></div>
+                </div>
+                <script>
+                  $(document).on('turbolinks:load', function() {
+                    let elem = document.querySelector('#post_raty');
+                    if (elem == null) return;
+
+                    elem.innerHTML = ""
+                    let opt = {
+                      starOn: "<%= asset_path('star-on.png') %>",
+                      starOff: "<%= asset_path('star-off.png') %>",
+                      starHalf: "<%= asset_path('star-half.png') %>",
+                      scoreName: 'book[star]',
+                    };
+                    raty(elem, opt);
+                  });
+                </script>
+              <% else %>
+                <div class="form-group">
+                  <%= render "star", posts: @post %>
+                </div>
+              <% end %>
+            </td>
           </tr>
+
           <tr>
             <td><%= f.submit '投稿', class:"btn btn-flex align-btn-cnter  btn-x btn-success" %></td>
           </tr>
