--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -5,29 +5,25 @@
       <h4 class="mb-4 bg-light " style="height:30px">新規投稿</h4>
       <div class=" text-align-center pt-5">
         <table class="table table-borderless">
-          <%= form_with model: @post, url: posts_path do |f| %>
+          <%= form_with model: @post do |f| %>
           <tr>
             <td>
             <%= f.label :image, "スキー場画像" %>
             <%= f.file_field :images, multiple: true  %>
             </td>
           </tr>
-          <tr>
-            <td>
-              <%= f.label :prefecture_id, "スキー場名" %>
-              <%= f.collection_select(:ski_resort_id, @ski_resort, :id, :name,{prompt: "--選択してください--"}) %>
-            </td>
-          </tr>
+
           <tr>
             <td>
               <%= f.label :body, "投稿内容" %>
               <%= f.text_area :body %>
             </td>
           </tr>
+
           <tr>
             <td>
-              <%= f.label :prefecture_id, "都道府県" %>
-              <%= f.collection_select(:prefecture_id, @prefecture, :id, :name,{prompt: "--選択してください--"}) %>
+              <%= f.label :ski_resort_id, "スキー場名" %>
+              <%= f.collection_select(:ski_resort_id, @ski_resorts, :id, :name, {prompt: "--選択してください--"}) %>
             </td>
           </tr>
 
@@ -35,7 +31,7 @@
             <td>
               <% if @post.id.nil? %>
                 <div class="form-group" id="star">
-                  <%= f.label :star %>
+                  <%= f.label :star, "レビュー" %>
                   <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
                   <div id="post_raty"></div>
                 </div>
