[Finish]customer-post

--- a/app/views/admin/ski_resorts/edit.html.erb
+++ b/app/views/admin/ski_resorts/edit.html.erb
@@ -11,7 +11,7 @@
 
 <div class="container mt-4">
   <div class="row no-gutters">
-      <h4 class="mb-4 bg-light " style="height:30px">スキー場新規登録</h4>
+      <h4 class="mb-4 bg-light " style="height:30px">スキー場編集</h4>
       <div class=" text-align-center pt-5">
         <table class="table table-borderless">
           <%= form_with model: @ski_resort, url: admin_ski_resort_path(@ski_resort.id) do |f| %>
