[Finish]customer-favorite

--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -14,6 +14,7 @@
               <th>プロフィール画像</th>
               <th>名前</th>
               <th>投稿</th>
+              <th>いいね</th>
               <th>評価</th>
           </tr>
           <% @posts.each do |posted| %>
@@ -28,6 +29,9 @@
                 <%= link_to post_path(posted.id) do %>
                   <%= posted.body %>
                 <% end %>
+              </td>
+              <td id="favorite_buttons_<%= posted.id %>">
+                <%= render "public/favorites/btn", posts: posted %>
               </td>
               <td><%= render "star", posts: posted %></td>
           </tr>
