--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -4,8 +4,9 @@
   <div class="row no-gutters">
       <h4 class="mb-4 bg-light " style="height:30px">新規投稿</h4>
       <div class=" text-align-center pt-5">
-        <table class="table table-borderless">
           <%= form_with model: @post do |f| %>
+        <table class="table table-borderless">
+
           <tr>
             <td>
             <%= f.label :image, "スキー場画像" %>
@@ -32,7 +33,7 @@
               <% if @post.id.nil? %>
                 <div class="form-group" id="star">
                   <%= f.label :star, "レビュー" %>
-                  <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
+
                   <div id="post_raty"></div>
                 </div>
                 <script>
@@ -45,7 +46,7 @@
                       starOn: "<%= asset_path('star-on.png') %>",
                       starOff: "<%= asset_path('star-off.png') %>",
                       starHalf: "<%= asset_path('star-half.png') %>",
-                      scoreName: 'book[star]',
+                      scoreName: 'post[star]',
                     };
                     raty(elem, opt);
                   });
@@ -61,8 +62,9 @@
           <tr>
             <td><%= f.submit '投稿', class:"btn btn-flex align-btn-cnter  btn-x btn-success" %></td>
           </tr>
-          <% end %>
+
         </table>
+        <% end %>
       </div>
   </div>
 </div>
