--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -31,8 +31,16 @@
           </th>
         </tr>
         <tr>
+          <th>いいね</th>
+          <th><%= render "favorites/btn", posts: @post %></th>
+        </tr>
+        <tr>
           <th>レビュー</th>
           <th><%= render "star", posts: @post %></th>
+        </tr>
+        <tr>
+          <th></th>
+          <th><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %></th>
         </tr>
       </table>
       <div class="mt-3 offset-2">
