--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -8,6 +8,9 @@
      <%= link_to "編集する", customers_information_edit_path, class:'btn btn-success' %>
 　  </div>
   <%end%>
+    <div>
+      <%= link_to "いいね一覧", customers_favorites_path(@customer), class:'btn btn-info' %>
+    </div>
 
     <div class="table mb-3 ml-3">
       <table class="table-bordered">
