--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="row">
-      <h4 class=class="mb-4 text-center bg-light"><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4>
+      <h4 class=class="mb-4 text-center bg-light"><%= @customer.name %>さんの会員詳細</h4>
        <table class="table table-borderless">
            <tr>
                <td>会員ID</td>
