--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4 class="bg-light text-center mt-4" style="width:150px">商品詳細</h3>
+  <h4 class="bg-light text-center mt-4" style="width:150px">投稿詳細</h3>
 
   <div class="col-md-9 ml-3 mx-auto">
   　<div class="row">
@@ -11,7 +11,7 @@
           <% end %>
         <% end %>
       </div>
-      <!--商品情報-->
+      <!--投稿情報-->
       <div>
       <table>
         <tr>
@@ -32,7 +32,7 @@
         </tr>
         <tr>
           <th>いいね</th>
-          <th><%= render "favorites/btn", posts: @post %></th>
+          <th><%= render "public/favorites/btn", posts: @post %></th>
         </tr>
         <tr>
           <th>レビュー</th>
@@ -40,7 +40,9 @@
         </tr>
         <tr>
           <th></th>
-          <th><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %></th>
+          <%= if @post.customer == current_customer %>
+            <th><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %></th>
+          <% end  %>
         </tr>
       </table>
       <div class="mt-3 offset-2">
