--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -32,21 +32,42 @@
         </tr>
         <tr>
           <th>いいね</th>
-          <th><%= render "public/favorites/btn", posts: @post %></th>
+          <th id="favorite_buttons_<%= @post.id %>">
+            <%= render "public/favorites/btn", posts: @post %>
+          </th>
         </tr>
         <tr>
           <th>レビュー</th>
           <th><%= render "star", posts: @post %></th>
         </tr>
         <tr>
-          <th></th>
-          <%= if @post.customer == current_customer %>
-            <th><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %></th>
-          <% end  %>
+          <th>コメント一覧</th>
+          <th>
+            <% @post.post_comments.each do |post_comment| %>
+              <%= post_comment.comment %>
+          </th>
+          <th>
+              <% if book_comment.user == current_user %>
+                <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+              <% end %>
+          </th>
+            <% end %>
+        </tr>
+        <tr>
+          <th>コメント</th>
+          <th>
+            <%= form_with model: [@post, @post_comment], url: post_post_comment_index_path(@post) do |f| %>
+              <%= f.text_area :comment, class:"form-control post_comment" %>
+              <%= f.submit "送信" %>
+            <% end %>
+          </th>
         </tr>
       </table>
+
       <div class="mt-3 offset-2">
-        <%= link_to "編集する", edit_post_path(@post.id), class:"btn btn-success" %>
+        <% if @post == current_customer %>
+          <%= link_to "編集する", edit_post_path(@post.id), class:"btn btn-success" %><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %>
+        <% end %>
       </div>
       </div>
     </div>
