--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,74 +1,85 @@
 <div class="container">
-  <h4 class="bg-light text-center mt-4" style="width:150px">投稿詳細</h3>
+  <h4 class="bg-light text-center mt-4" style="width:150px">投稿詳細</h4>
 
-  <div class="col-md-9 ml-3 mx-auto">
   　<div class="row">
     　  <!--写真-->
-      <div class="mr-2">
+      <div class="col-7">
         <% if @post.image.attached? %>
           <% @post.image.each do |image| %>
             <%= image_tag image.variant(resize: '500x500') %>
           <% end %>
         <% end %>
-      </div>
-      <!--投稿情報-->
-      <div>
-      <table>
-        <tr>
-          <th style="width:150px">投稿者名</th>
-          <th style="width:260px"><%= @post.customer.name %></th>
-        </tr>
-        <tr>
-          <th>投稿内容</th>
-          <th><%= @post.body %></th>
-        </tr>
-        <tr>
-          <th>スキー場</th>
-          <th>
-            <%= link_to ski_resort_path(@post.ski_resort_id) do %>
-              <%= @post.ski_resort.name %>
-            <% end %>
-          </th>
-        </tr>
-        <tr>
-          <th>いいね</th>
-          <th id="favorite_buttons_<%= @post.id %>">
-            <%= render "public/favorites/btn", posts: @post %>
-          </th>
-        </tr>
-        <tr>
-          <th>レビュー</th>
-          <th><%= render "star", posts: @post %></th>
-        </tr>
-        <tr>
-          <th>コメント一覧</th>
-          <th>
-            <% @post.post_comments.each do |post_comment| %>
-              <%= post_comment.comment %>
-          </th>
-          <th>
-              <% if book_comment.user == current_user %>
-                <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
-              <% end %>
-          </th>
-            <% end %>
-        </tr>
-        <tr>
-          <th>コメント</th>
-          <th>
-            <%= form_with model: [@post, @post_comment], url: post_post_comment_index_path(@post) do |f| %>
-              <%= f.text_area :comment, class:"form-control post_comment" %>
-              <%= f.submit "送信" %>
-            <% end %>
-          </th>
-        </tr>
-      </table>
 
-      <div class="mt-3 offset-2">
+      <!--投稿情報-->
+
+        <table class="table">
+          <tr>
+            <th style="width:150px">投稿者名</th>
+            <th style="width:260px"><%= @post.customer.name %></th>
+          </tr>
+          <tr>
+            <th>投稿内容</th>
+            <th><%= @post.body %></th>
+          </tr>
+          <tr>
+            <th>スキー場</th>
+            <th>
+              <%= link_to ski_resort_path(@post.ski_resort_id) do %>
+                <%= @post.ski_resort.name %>
+              <% end %>
+            </th>
+          </tr>
+          <tr>
+            <th>いいね</th>
+            <th id="favorite_buttons_<%= @post.id %>">
+              <%= render "public/favorites/btn", posts: @post %>
+            </th>
+          </tr>
+          <tr>
+            <th>レビュー</th>
+            <th><%= render "star", posts: @post %></th>
+          </tr>
+        </table>
+
         <% if @post == current_customer %>
           <%= link_to "編集する", edit_post_path(@post.id), class:"btn btn-success" %><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %>
         <% end %>
+
       </div>
+
+      <div class="col-4">
+        <table class="table">
+          <% if @post.post_comments.exists? %>
+          <tr>
+            <th>コメント一覧</th>
+            <th>ユーザー名</th>
+            <th>コメント</th>
+            <th></th>
+          </tr>
+
+          <% @post.post_comments.each do |post_comment| %>
+          <tr>
+            <td></td>
+            <td>
+              <%= post_comment.customer.name %>
+            </td>
+            <td>
+              <%= post_comment.comment %>
+            </td>
+            <% if post_comment.customer == current_customer %>
+            <td>
+              <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), class: 'btn btn-sm btn-danger', method: :delete %>
+            </td>
+            <% end %>
+          </tr>
+            <% end %>
+          <% end %>
+        </table>
+
+        <%= form_with model: [@post, @post_comment], method: :post do |f| %>
+          <%= f.text_area :comment, placeholder: "コメント" %>
+          <%= f.submit "送信" %>
+        <% end %>
       </div>
     </div>
   </div>
