--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -15,6 +15,7 @@
               <th>名前</th>
               <th>投稿</th>
               <th>いいね</th>
+              <th>コメント数</th>
               <th>評価</th>
           </tr>
           <% @posts.each do |posted| %>
@@ -33,6 +34,7 @@
               <td id="favorite_buttons_<%= posted.id %>">
                 <%= render "public/favorites/btn", posts: posted %>
               </td>
+              <td><%= posted.post_comments.count %></td>
               <td><%= render "star", posts: posted %></td>
           </tr>
           <% end %>
