--- a/app/views/admin/ski_resorts/index.html.erb
+++ b/app/views/admin/ski_resorts/index.html.erb
@@ -14,7 +14,7 @@
           <table class="table mt-3">
             <thead>
               <tr>
-                <th>スキー場画像</th>
+                <th>スキー場 id</th>
                 <th>スキー場名</th>
                 <th>紹介文</th>
                 <th>都道府県</th>
