--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
+    <!--swiperの記述-->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
     <script src="https://kit.fontawesome.com/c05413531d.js" crossorigin="anonymous"></script>
@@ -19,6 +20,8 @@
       <main><%= yield %></main>
       <footer class="border-top border-dark"></footer>
     </div>
+    
+    <!--swiperの記述-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   </body>
 </html>
