--- a/app/views/admin/ski_resorts/show.html.erb
+++ b/app/views/admin/ski_resorts/show.html.erb
@@ -1,46 +1,43 @@
+  <!--写真-->
+<% if @ski_resort.ski_resort_images.attached? %>
+  <div class="swiper-container">
+    <div class= "swiper-wrapper img-index">
+      <% @ski_resort.ski_resort_images.each do |image| %>
+        <%= image_tag image, class: "swiper-slide index-img swpeImg" %>
+      <% end %>
+    </div>
+    <div class="swiper-button-prev swiper-button-white"></div>
+    <div class="swiper-button-next swiper-button-white"></div>
+    <div class="swiper-pagination"></div>
+  </div>
+<% end %>
+
 <div class="container">
   <h4 class="bg-light text-center mt-4" style="width:150px">スキー場詳細</h3>
-
   <div class="col-md-9 ml-3 mx-auto">
-  　<div class="row">
-    　  <!--写真-->
-      <div class="mr-2">
-        <div class="swiper-container">
-          <div class= "swiper-wrapper img-index">
-            <% @ski_resort.images.each do |image| %>
-              <%= image_tag image, class: "swiper-slide index-img" %>
-            <% end %>
-          </div>
-          <div class="swiper-button-prev swiper-button-white"></div>
-          <div class="swiper-button-next swiper-button-white"></div>
-          <div class="swiper-pagination"></div>
+      <!--スキー場情報-->
+      <div class="row">
+        <table class="table">
+          <tr>
+            <th style="width:150px">スキー場名</th>
+            <th style="width:260px"><%= @ski_resort.name %></th>
+          </tr>
+          <tr>
+            <th>スキー場説明</th>
+            <th><%= @ski_resort.introduction %></th>
+          </tr>
+          <tr>
+            <th>都道府県</th>
+            <th><%= @ski_resort.prefecture.name %></th>
+          </tr>
+          <tr>
+            <th>住所</th>
+            <th><%= @ski_resort.address %></th>
+          </tr>
+        </table>
+        <div class="mt-3 offset-2">
+          <%= link_to "編集する", edit_admin_ski_resort_path(@ski_resort.id), class:"btn btn-success" %>
         </div>
       </div>
-      
-      <!--スキー場情報-->
-      <div>
-      <table>
-        <tr>
-          <th style="width:150px">スキー場名</th>
-          <th style="width:260px"><%= @ski_resort.name %></th>
-        </tr>
-        <tr>
-          <th>スキー場説明</th>
-          <th><%= @ski_resort.introduction %></th>
-        </tr>
-        <tr>
-          <th>都道府県</th>
-          <th><%= @ski_resort.prefecture.name %></th>
-        </tr>
-        <tr>
-          <th>住所</th>
-          <th><%= @ski_resort.address %></th>
-        </tr>
-      </table>
-      <div class="mt-3 offset-2">
-        <%= link_to "編集する", edit_admin_ski_resort_path(@ski_resort.id), class:"btn btn-success" %>
-      </div>
-      </div>
-    </div>
   </div>
 </div>
