[Finish]customer-swiper

--- a/app/views/public/ski_resorts/index.html.erb
+++ b/app/views/public/ski_resorts/index.html.erb
@@ -24,7 +24,7 @@
                   <%= ski_resort.id %>
                 </td>
                 <td>
-                  <%= link_to admin_ski_resort_path(ski_resort.id) do %>
+                  <%= link_to ski_resort_path(ski_resort.id) do %>
                     <%= ski_resort.name %>
                   <% end %>
                 </td>
