--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -14,6 +14,8 @@
               <th>プロフィール画像</th>
               <th>名前</th>
               <th>投稿</th>
+              <th>スキー場</th>
+              <th>投稿画像数</th>
               <th>いいね</th>
               <th>コメント数</th>
               <th>評価</th>
@@ -22,7 +24,7 @@
           <tr>
               <td><%= image_tag posted.customer.get_profile_image(80, 80) %></td>
               <td>
-                <%= link_to customers_mypage_path(posted.customer.id) do %>
+                <%= link_to customer_path(posted.customer.id) do %>
                   <%= posted.customer.name %>
                 <% end %>
               </td>
@@ -31,6 +33,12 @@
                   <%= posted.body %>
                 <% end %>
               </td>
+              <td>
+                <%= link_to ski_resort_path(posted.ski_resort_id) do %>
+                  <%= posted.ski_resort.name %>
+                <% end %>
+              </td>
+              <td><%= posted.images.count %>枚</td>
               <td id="favorite_buttons_<%= posted.id %>">
                 <%= render "public/favorites/btn", posts: posted %>
               </td>
