--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -9,7 +9,7 @@
 
           <tr>
             <td>
-            <%= f.label :image, "スキー場画像" %>
+            <%= f.label :images, "スキー場投稿画像" %>
             <%= f.file_field :images, multiple: true  %>
             </td>
           </tr>
