--- a/app/views/public/customers/favorites.html.erb
+++ b/app/views/public/customers/favorites.html.erb
@@ -13,7 +13,7 @@
           <tr>
               <td><%= image_tag posted.customer.get_profile_image(80, 80) %></td>
               <td>
-                <%= link_to customers_mypage_path(posted.customer.id) do %>
+                <%= link_to customer_path(posted.customer.id) do %>
                   <%= posted.customer.name %>
                 <% end %>
               </td>
