--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -2,13 +2,13 @@
 <div class="container ml-5">
 　<h4 class="bg-light d-inline-block mb-2 offset-2 p-1">マイページ</h4>
 
-  <% unless @customer.guest_user? %>
-   <div class="d-flex">
-     <h4 class="my-auto col-2"><b>登録情報</b></h4>
-     <%= link_to "編集する", customers_information_edit_path, class:'btn btn-success my-auto col-2 mr-3' %>
-     <%= link_to "いいね一覧", customers_favorites_path(@customer), class:'btn btn-info my-auto col-2' %>
-　  </div>
-  <%end%>
+    <% if @customer.id == current_customer.id %>
+       <div class="d-flex">
+         <h4 class="my-auto col-2"><b>登録情報</b></h4>
+         <%= link_to "編集する", edit_customer_path(@customer.id), class:'btn btn-success my-auto col-2 mr-3' %>
+         <%= link_to "いいね一覧", customers_favorites_customer_path(@customer.id), class:'btn btn-info my-auto col-2' %>
+    　  </div>
+    <%end%>
 
 
     <div class="table mb-3 ml-3">
