--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -11,20 +11,14 @@
 
 <div class="container mt-4">
   <div class="row no-gutters">
-      <h4 class="mb-4 bg-light " style="height:30px">スキー場新規登録</h4>
+      <h4 class="mb-4 bg-light " style="height:30px">投稿内容変更</h4>
       <div class=" text-align-center pt-5">
         <table class="table table-borderless">
           <%= form_with model: @post, url: post_path(@post.id) do |f| %>
           <tr>
             <td>
-            <%= f.label :image, "投稿画像" %>
+            <%= f.label :images, "投稿画像" %>
             <%= f.file_field :images, multiple: true  %>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <%= f.label :name, "投稿者名" %>
-              <%= f.text_field :name %>
             </td>
           </tr>
           <tr>
