--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,17 +1,25 @@
-<div class="container">
-  <h4 class="bg-light text-center mt-4" style="width:150px">投稿詳細</h4>
 
-  　<div class="row">
     　  <!--写真-->
-      <div class="col-7">
-        <% if @post.image.attached? %>
-          <% @post.image.each do |image| %>
-            <%= image_tag image.variant(resize: '500x500') %>
-          <% end %>
+
+        <% if @post.images.attached? %>
+            <div class="swiper-container">
+              <div class= "swiper-wrapper img-index">
+                <% @post.images.each do |image| %>
+                  <%= image_tag image, class: "swiper-slide index-img swpeImg" %>
+                <% end %>
+              </div>
+              <div class="swiper-button-prev swiper-button-white"></div>
+              <div class="swiper-button-next swiper-button-white"></div>
+              <div class="swiper-pagination"></div>
+            </div>
         <% end %>
 
       <!--投稿情報-->
 
+<div class="container">
+  <h4 class="bg-light text-center mt-4" style="width:150px">投稿詳細</h4>
+    <div class="row">
+      <div class="col-7">
         <table class="table">
           <tr>
             <th style="width:150px">投稿者名</th>
@@ -41,17 +49,17 @@
           </tr>
         </table>
 
-        <% if @post == current_customer %>
-          <%= link_to "編集する", edit_post_path(@post.id), class:"btn btn-success" %><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %>
+        <% if @post.customer == current_customer %>
+          <%= link_to "編集する", edit_post_path(@post.id), class:"btn btn-success mr-5 ml-5" %><%= link_to "削除", post_path(@post), class: 'btn btn-sm btn-danger', method: :delete %>
         <% end %>
 
       </div>
 
-      <div class="col-4">
+      <div class="col-5">
+        <h4 class="bg-light text-center mt-4" style="width:150px">コメント一覧</h4>
         <table class="table">
           <% if @post.post_comments.exists? %>
           <tr>
-            <th>コメント一覧</th>
             <th>ユーザー名</th>
             <th>コメント</th>
             <th></th>
@@ -59,7 +67,6 @@
 
           <% @post.post_comments.each do |post_comment| %>
           <tr>
-            <td></td>
             <td>
               <%= post_comment.customer.name %>
             </td>
@@ -82,5 +89,4 @@
         <% end %>
       </div>
     </div>
-  </div>
 </div>
