--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -7,7 +7,18 @@
 
 <div class="container">
   <div class="row">
+
+    <!--サイドバー-->
+    <div class="col-2">
+    </div>
+
+    <!--ここからメイン-->
+    <div class="col-9">
       <h4 class="bg-light">投稿一覧</h4>
+
+       <%= link_to '新しい順', posts_path(latest: "true") %>
+       |<%= link_to '古い順', posts_path(old: "true") %>
+       |<%= link_to '評価の高い順', posts_path(star_count: "true") %>
 
       <table class ="table">
           <tr>
@@ -47,5 +58,6 @@
           </tr>
           <% end %>
       </table>
+    </div>
   </div>
 </div>
