--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,12 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<div class="container">
+  <div class="text-center">
+    <h4>雪山子について</h4>
+    <p>行きたいスキー場を検索したり、自分が行った際の写真を投稿したりきるレビューサイトです</p>
+    <p>気軽にスキー場のレビューを行うことができ、コメントやいいねなどもできます。</p>
+    <p>レビューを見て気になったスキー場に足を運んでもらえたら幸いです</p>
+    
+    <%= link_to root_path do %>
+      <%= image_tag 'logo.png', :size => '200x200' %>
+    <% end %>
+  </div>
+</div>
