--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,7 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container">
+  <div class="text-center">
+    <h4>管理者トップページ</h4>
+    <p>・スキー場を追加する際は都道府県から先に追加してください</p>
+    <%= image_tag 'logo.png', :size => '400x400' %>
+  </div>
+</div>
