--- a/app/views/public/ski_resorts/index.html.erb
+++ b/app/views/public/ski_resorts/index.html.erb
@@ -1,44 +1,15 @@
-
-    <div class="col-lg-12">
-      <div class="d-flex">
-      <h4 class="bg-light d-inline-block my-2 offset-1">スキー場一覧</h4>
-
-      </div>
-      <div class="ml-3">
-        <div class="flex-row">
-
-          <table class="table mt-3">
-            <thead>
-              <tr>
-                <th>スキー場画像</th>
-                <th>スキー場名</th>
-                <th>紹介文</th>
-                <th>都道府県</th>
-              </tr>
-            </thead>
-
-            <tbody>
-            <% @ski_resorts.each do |ski_resort| %>
-              <tr>
-                <td>
-                  <%= ski_resort.id %>
-                </td>
-                <td>
-                  <%= link_to ski_resort_path(ski_resort.id) do %>
-                    <%= ski_resort.name %>
-                  <% end %>
-                </td>
-                <td>
-                  <%= ski_resort.introduction %>
-                </td>
-                <td>
-                  <%= ski_resort.prefecture.name %>
-                </td>
-              </tr>
-            <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
+<div class="container">
+  <div class="row">
+      <!--サイドバー-->
+    <div class="col-3">
+      <%= render 'sidebar', prefectures: @prefectures %>
     </div>
+
+      <!--一覧-->
+    <div class="col-9">
+       <h4 class="bg-light d-inline-block my-2 offset-1">スキー場一覧</h4>
+       <%= render 'index', ski_resorts: @ski_resorts %>
+    </div>
+  </div>
+</div>
 
