--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
   <div class="row">
-    
+
     <!--投稿内容-->
     <div class="col-9">
       <h4 class="bg-light">投稿一覧</h4>
@@ -44,4 +44,5 @@
       </table>
     </div>
   </div>
+  <%= paginate @posts %>
 </div>
