--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -8,9 +8,6 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-2">
-    </div>
-
     <!--ここからメイン-->
     <div class="col-9">
       <h4 class="bg-light">投稿一覧</h4>
@@ -59,4 +56,5 @@
       </table>
     </div>
   </div>
+  <%= paginate @posts %>
 </div>
