--- a/app/views/public/ski_resorts/index.html.erb
+++ b/app/views/public/ski_resorts/index.html.erb
@@ -10,6 +10,8 @@
        <h4 class="bg-light d-inline-block my-2 offset-1">スキー場一覧</h4>
        <%= render 'index', ski_resorts: @ski_resorts %>
     </div>
+    
   </div>
+  <%= paginate @ski_resorts %>
 </div>
 
