--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -37,7 +37,7 @@
                   <%= posted.ski_resort.name %>
                 <% end %>
               </td>
-              <td><%= posted.post_comments.count %></td>
+              <td><%= posted.images.count %></td>
               <td><%= render "public/posts/star", posts: posted %></td>
           </tr>
           <% end %>
