--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -4,6 +4,16 @@
   <div class="row no-gutters">
       <h4 class="mb-4 bg-light " style="height:30px">新規投稿</h4>
       <div class=" text-align-center pt-5">
+
+        <% if @post.errors.any? %>
+          <%= @post.errors.count %>件のエラーが発生しました
+          <ul>
+             <% @post.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+          <% end %>
+          </ul>
+        <% end %>
+
           <%= form_with model: @post do |f| %>
         <table class="table table-borderless">
 
